2010-10-14  Sancho Lerena <slerena@artica.es>

	* util/pandora_manage.pl: Removed some warnings.

2010-10-13  Sancho Lerena <slerena@artica.es>

    * Core.pm: Force XML::Simple to use XML::Parser instead SAX to manage XML
    due a bug processing some XML with blank spaces.

    * DataServer.pm: Checking for BADXML is 2 times with 2 secs of delay now. 
    Aditional check before deleting / procesing XML.

    * pandora_server: Added handle of BadXML error to avoid see "unhandled" 
    errors on log, and set to verbose level 2.

2010-10-07  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf: Removed multicast options

    * Makefile.PL: Removed need for dependencies on Mail::Sendmail
    and Traceroute::PurePerl, now are included in the Pandora FMS
    distribution.

    * lib/PandoraFMS/Config.pm: Removed options for multicast

    * lib/PandoraFMS/Traceroute.pm, 
      lib/PandoraFMS/Sendmail.pm,
      lib/PandoraFMS/Traceroute/PurePerl.pm: Now included on Pandora FMS
    distribution, this will help to do easier installs of Pandora, because
    that packages was difficult to build/install in different distros.

    * lib/PandoraFMS/Core.pm: Removed the old multicast-on change enterprise
    feature, not used/supported anymore.

    * lib/PandoraFMS/ReconServer.pm: Now uses the internal Traceroute Pureperl
    implementation.

    * lib/PandoraFMS/Tools.pm: Now uses the internal Mail::Sendmail copy.

    * bin/pandora_server: Removed the multicast option from main loop.

    * FreeBSD/pandora_server.conf: Removed multicast from options.

    * util/mcast_client.pl: Deleted sample client for multicast.

    * util/pandora_logrotate: Updated the rotate options for SNMP logfile.

    * util/compaq_chassis_trap_manager2.pl: Added sample of SNMP Trap postprocessor.

    * pandora_server.redhat.spec,
      pandora_server.spec,
      DEBIAN/control: Updated packages deps and other minor changes (xprobe2 is not
      mandatory now).
